--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,3 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+*{
+    padding: 0;
+}
+
+@keyframes progressAnimation {
+    0% {
+        width: 0%;
+    }
+    100% {
+        width: 100%;
+    }
+}
+
+.animate-progress {
+    animation: progressAnimation 2.5s linear infinite;
+}
